# Klaxon

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  alert.html  dev-launch.err  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-17-mobile-background-sync.md
docs/superpowers/specs/: 2026-06-17-mobile-background-sync-design.md
src/: Alert.svelte  App.svelte  alert.ts  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  error.rs  lib.rs  main.rs  mobile_bg.rs  models.rs  nl.rs  recurrence.rs  scheduler.rs  tray.rs
src-tauri/src/alerts/: fullscreen.rs  mod.rs  popup.rs  toast.rs
src-tauri/src/db/: migrations.rs  mod.rs  peers.rs  reminders.rs  settings.rs  task_lanes.rs  tombstones.rs
src-tauri/src/sync/: client.rs  discovery.rs  iroh_client.rs  iroh_handler.rs  iroh_node.rs  mod.rs  ops.rs  pair_handler.rs  proto.rs  server.rs  task.rs  tls.rs  types.rs
src/lib/: api.ts  mobile-scheduler.ts  platform.ts  shortcut.ts  stores.ts  time.ts  types.ts
src/lib/components/: CalendarView.svelte  ConfirmModal.svelte  EmptyState.svelte  IncomingPairModal.svelte  QuickAdd.svelte  ReminderEditor.svelte  ReminderItem.svelte  ReminderList.svelte  SettingsModal.svelte  Sidebar.svelte  SignalLight.svelte  StatusBar.svelte  SyncSection.svelte  TasksBoard.svelte  TopBar.svelte
