[package]
name = "klaxon"
version = "0.1.0"
description = "A reminder app that gets your attention"
authors = ["Will Herr"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "klaxon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rodio = "0.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
