[package]
name = "klaxon"
version = "0.3.1-rc.1"
description = "A reminder app that gets your attention"
authors = ["Will Herr"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "klaxon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rodio = "0.19"
rand = "0.8"
hex = "0.4"
local-ip-address = "0.6"
mdns-sd = "0.13"
sha2 = "0.10"
rustls = "0.23"

# v0.3 iroh transport — phase 1 wires up an Endpoint alongside the existing
# HTTPS sync server. Cutover to iroh-only happens in a later phase.
#
# `portmapper` (default) pulls in netwatch → wmi 0.18.4, which has its own
# windows-core version conflict on Windows. We get along fine without UPnP
# port mapping — iroh's hole-punching + relays are the primary NAT traversal
# path. `tls-ring` and `metrics` re-added because they're useful defaults.
iroh = { version = "1.0.0-rc.0", default-features = false, features = ["tls-ring", "metrics"] }
# postcard: small, fast, schema-less serde format. Used to encode RPC
# envelopes (length-prefixed) on iroh bidi streams.
postcard = { version = "1", features = ["alloc"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
